add config folder to gitignore

--- a/config/config.env
+++ b/config/config.env
@@ -1,3 +1,3 @@
 NODE_ENV=development
 PORT=5000
-MONGO_URI=mongodb+srv://lipsumx1:eric10@cluster0.uf4dj.mongodb.net/<dbname>?retryWrites=true&w=majority
+MONGO_URI=mongodb+srv://lipsumx1:eric10@cluster0.uf4dj.mongodb.net/auth_test?retryWrites=true&w=majority
