--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bcrypt-nodejs": "^0.0.3",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "jwt-simple": "^0.5.6",
     "mongoose": "^5.11.10",
     "morgan": "^1.10.0"
   },
