--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "express": "^4.17.1",
     "jwt-simple": "^0.5.6",
     "mongoose": "^5.11.10",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "passport": "^0.4.1",
+    "passport-jwt": "^4.0.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
